# opensecurity

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/show-camera/: CMakeLists.txt  main.cpp
